Update Java code to compile with Java 21 and remove probedock dependencies
Co-authored-by: jonesbusy <825750+jonesbusy@users.noreply.github.com>