@@ -2,18 +2,18 @@
 package cloud.delaye.backend.data;
 
 import java.util.List;
-import javax.ejb.TransactionAttribute;
-import javax.ejb.TransactionAttributeType;
-import javax.ejb.TransactionManagement;
-import javax.persistence.Entity;
-import javax.persistence.EntityManager;
-import javax.persistence.EntityTransaction;
-import javax.persistence.NoResultException;
-import javax.persistence.NonUniqueResultException;
-import javax.persistence.Query;
-import javax.persistence.TypedQuery;
-import javax.persistence.criteria.CriteriaBuilder;
-import javax.persistence.criteria.CriteriaQuery;
+import jakarta.ejb.TransactionAttribute;
+import jakarta.ejb.TransactionAttributeType;
+import jakarta.ejb.TransactionManagement;
+import jakarta.persistence.Entity;
+import jakarta.persistence.EntityManager;
+import jakarta.persistence.EntityTransaction;
+import jakarta.persistence.NoResultException;
+import jakarta.persistence.NonUniqueResultException;
+import jakarta.persistence.Query;
+import jakarta.persistence.TypedQuery;
+import jakarta.persistence.criteria.CriteriaBuilder;
+import jakarta.persistence.criteria.CriteriaQuery;
 
 /**
  * DAO that support user transaction to define the transaction boundaries
@@ -107,9 +107,9 @@ public abstract class AbstractDao<T extends IEntity> implements IDao<T> {
 	@Override
 	public T create() {
 		try {
-			return entityClass.newInstance();
+			return entityClass.getDeclaredConstructor().newInstance();
 		}
-		catch (InstantiationException | IllegalAccessException ex) {
+		catch (ReflectiveOperationException ex) {
 			return null;
 		}
 	}
